Remove unused code, general tidying

--- a/bootstrap/personality/bootstrap-config.json
+++ b/bootstrap/personality/bootstrap-config.json
@@ -1,10 +1,7 @@
 {
     "bootstrap": "{{base_script_url}}/bootstrap.ps1",
     "setup": "{{base_script_url}}/setup.ps1",
-    "api_token": {
-        "name": "token",
-        "value": "{{api_token}}"
-    },
+    "api_token": { "name": "token", "value": "{{api_token}}" },
     "app_name": "{{app_name}}",
     "environment_name": "{{environment_name}}",
     "domain_name": "{{domain_name}}",
