--- a/bootstrap/personality/bootstrap-config.json
+++ b/bootstrap/personality/bootstrap-config.json
@@ -2,6 +2,7 @@
     "bootstrap": "{{base_script_url}}/bootstrap.ps1",
     "setup": "{{base_script_url}}/setup.ps1",
     "api_token": { "name": "token", "value": "{{api_token}}" },
+    "bootstrap_type": "{{bootstrap_type}}",
     "app_name": "{{app_name}}",
     "environment_name": "{{environment_name}}",
     "domain_name": "{{domain_name}}",
