--- a/bootstrap/personality/bootstrap-config.json
+++ b/bootstrap/personality/bootstrap-config.json
@@ -8,6 +8,5 @@
     "domain_name": "{{domain_name}}",
     "rackspace_username": "{{rackspace_username}}",
     "aa_dsc_reg_url": "{{aa_dsc_reg_url}}",
-    "aa_dsc_reg_key": "{{aa_dsc_reg_key}}",
-    "aa_dsc_node_config_name": "{{aa_dsc_node_config_name}}"
+    "aa_dsc_reg_key": "{{aa_dsc_reg_key}}"
 }
